service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-taches-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: gestion-taches
